--- a/src/components/extras/Marquesina.astro
+++ b/src/components/extras/Marquesina.astro
@@ -1,1 +1,63 @@
-<h2>Marquesina</h2>
+---
+const { texto } = Astro.props;
+---
+
+<div id="marquee" class="py-16 font-bold">
+  <div class="marquee__item">
+    <h2 class="texto-bordeado">
+      {texto}
+    </h2>
+    <h2>
+      {texto}
+    </h2>
+  </div>
+  <div class="marquee__item">
+    <h2 class="texto-bordeado">
+      {texto}
+    </h2>
+    <h2>
+      {texto}
+    </h2>
+  </div>
+</div>
+
+<style>
+  #marquee {
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    pointer-events: none;
+    user-select: none;
+    .marquee__item {
+      white-space: nowrap;
+      pointer-events: none;
+      display: inline-flex;
+      animation: marqueeAnimation 50s linear infinite;
+      font-family: "Oswald", sans-serif;
+      padding-right: 1rem;
+      h2 {
+        color: var(--color-borde);
+        font-size: 3.5rem;
+        text-shadow: 1px 1px 1px #121212;
+      }
+      .texto-bordeado {
+        -webkit-text-stroke-color: var(--color-borde);
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke-width: 0.02em;
+        padding-right: 1rem;
+        text-shadow: none;
+      }
+    }
+  }
+
+  @keyframes marqueeAnimation {
+    0% {
+      -webkit-transform: translateZ(0);
+      transform: translateZ(0);
+    }
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+</style>
