--- a/src/layouts/Container.astro
+++ b/src/layouts/Container.astro
@@ -1,3 +1,10 @@
-<div class="@container container mx-auto px-4">
+---
+interface Props {
+  className?: string;
+}
+const { className = "" } = Astro.props;
+---
+
+<div class={`@container container mx-auto px-4 overflow-hidden ${className}`}>
   <slot />
 </div>
