--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,8 @@ import { menu } from "@lib/menu.ts";
         </ul>
         <a
           href="https://aulavirtualcenakin.com"
-          class="btn btn-primary uppercase">Aula Virtual</a
+          class="border-none btn btn-primary uppercase bg-sky-600 text-white hover:bg-sky-800 hover:text-white transition-colors"
+          >Aula Virtual</a
         >
       </div>
     </Container>
