--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title, description, url, image, keywords } = Astro.props
 ---
 
 <!doctype html>
-<html lang="es" data-theme="corporate">
+<html lang="es" data-theme="emerald">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
