--- a/src/components/categorias/Header.astro
+++ b/src/components/categorias/Header.astro
@@ -2,11 +2,11 @@
 const { titulo, descripcion } = Astro.props;
 ---
 
-<div class="hero bg-base-200 h-80 rounded-lg my-4">
+<div class="hero bg-sky-600 h-80 rounded-lg my-4">
   <div class="hero-content text-center">
     <div class="max-w-2xl">
-      <h1 class="text-5xl font-bold">{titulo}</h1>
-      <p class="py-6 text-lg">
+      <h1 class="text-5xl font-bold text-white">{titulo}</h1>
+      <p class="py-6 text-lg text-gray-200">
         {descripcion}
       </p>
     </div>
