--- a/src/pages/terminos/politica-privacidad.astro
+++ b/src/pages/terminos/politica-privacidad.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@layouts/Layout.astro";
+import Container from "@layouts/Container.astro";
 import type { Seo } from "@interfaces/Seo";
 
 const seo: Seo = {
