--- a/src/pages/terminos/terminos-y-condiciones.astro
+++ b/src/pages/terminos/terminos-y-condiciones.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "@layouts/Layout.astro";
 import Container from "@layouts/Container.astro";
 import type { Seo } from "@interfaces/Seo";
 
