--- a/src/components/cursos/Cabecera.astro
+++ b/src/components/cursos/Cabecera.astro
@@ -9,7 +9,7 @@ const { titulo, slug, id } = Astro.props;
 >
   <div class="hero-overlay rounded-lg"></div>
   <div class="hero-content text-neutral-content">
-    <div class="max-w-md flex flex-col items-center justify-center">
+    <div class="flex flex-col items-center justify-center">
       <h1 class="mb-5 text-6xl font-bold text-center">{titulo}</h1>
       <a
         href={`https://cenakin.cl/pdfs/${id}.pdf`}
