--- a/src/components/cursos/Introduccion.astro
+++ b/src/components/cursos/Introduccion.astro
@@ -3,5 +3,5 @@ const { texto } = Astro.props;
 ---
 
 <div class="card bg-base-100 shadow-sm">
-  <div class="card-body prose" set:html={texto} />
+  <div class="card-body prose max-w-full" set:html={texto} />
 </div>
