--- a/src/components/cursos/RePlan.astro
+++ b/src/components/cursos/RePlan.astro
@@ -6,9 +6,9 @@ const { requisitos, plan } = Astro.props;
   {
     requisitos && (
       <div class="card bg-base-100 shadow-sm">
-        <div class="card-body">
+        <div class="card-body prose max-w-full">
           <h3 class="text-xl font-bold text-sky-600">Requisitos</h3>
-          <div set:html={requisitos} class="prose" />
+          <div set:html={requisitos} />
         </div>
       </div>
     )
@@ -16,9 +16,9 @@ const { requisitos, plan } = Astro.props;
   {
     plan && (
       <div class="card bg-base-100 shadow-sm">
-        <div class="card-body">
+        <div class="card-body prose max-w-full">
           <h3 class="text-xl font-bold text-sky-600">Plan de Estudios</h3>
-          <div set:html={plan} class="prose" />
+          <div set:html={plan} />
         </div>
       </div>
     )
