--- a/src/components/cursos/ReservaPrecio.astro
+++ b/src/components/cursos/ReservaPrecio.astro
@@ -20,7 +20,7 @@ const moneda = (valor) => {
 <div class="stat col-span-1">
   <div class="stat-title">Valores y Formas de pago</div>
   <h4 class="font-bold text-2xl">Arancel Total</h4>
-  <div class="stat-value text-sky-600 text-5xl text-center p-6">
+  <div class="stat-value text-sky-600 text-5xl text-center py-6">
     {moneda(precio)} CLP
   </div>
   <div>
