Arreglo titulo y colores de categorias

--- a/src/components/inicio/Formaciones.astro
+++ b/src/components/inicio/Formaciones.astro
@@ -12,26 +12,26 @@ import {
 const formaciones = [
   {
     name: "Masoterapia",
-    color: "oklch(58% 0.158 241.966)",
+    color: "oklch(58.8% 0.158 241.966)",
     borderColor: "border-sky-600",
     slug: "masoterapia",
   },
   {
     name: "Salud",
-    color: "oklch(57.7% .245 27.325)",
-    borderColor: "border-red-600",
+    color: "oklch(49.1% .27 292.581)",
+    borderColor: "border-violet-600",
     slug: "salud",
   },
   {
     name: "Marketing",
-    color: "oklch(49.1% .27 292.581)",
-    borderColor: "border-violet-600",
+    color: "oklch(70.7% 0.165 254.624)",
+    borderColor: "border-blue-400",
     slug: "marketing",
   },
   {
     name: "Formaciones Online",
-    color: "oklch(52.7% .154 150.069)",
-    borderColor: "border-green-600",
+    color: "oklch(70.4% 0.04 256.788)",
+    borderColor: "border-slate-400",
     slug: "online",
   },
 ];
