--- a/src/components/cursos/Cabecera.astro
+++ b/src/components/cursos/Cabecera.astro
@@ -10,7 +10,7 @@ const { titulo, slug, id } = Astro.props;
   <div class="hero-overlay rounded-lg"></div>
   <div class="hero-content text-neutral-content">
     <div class="flex flex-col items-center justify-center">
-      <h1 class="mb-5 text-6xl font-bold text-center">{titulo}</h1>
+      <h1 class="mb-5 text-4xl lg:text-6xl font-bold text-center">{titulo}</h1>
       <a
         href={`https://cenakin.cl/pdfs/${id}.pdf`}
         class="btn border-none bg-violet-600 text-white hover:bg-violet-900 hover:text-white transition-colors uppercase btn-lg"
