Arreglos menores, color btn whatsapp, arreglo titulo curso, texto de tarjeta

--- a/src/components/cursos/Reserva.astro
+++ b/src/components/cursos/Reserva.astro
@@ -40,9 +40,7 @@ const moneda = (valor) => {
 
   <div class="stat col-span-1">
     <div class="stat-title">Medios de Pago</div>
-    <span>
-      Tarjeta de débito o tarjeta de crédito, hasta 6 cuotas precio contado.
-    </span>
+    <span> Pago con tarjeta de débito o tarjeta de crédito. </span>
     <img src="/images/medios-pago.png" alt="Medios de pago" />
   </div>
 </div>
