--- a/src/components/categorias/Masoterapia.astro
+++ b/src/components/categorias/Masoterapia.astro
@@ -3,31 +3,31 @@ import Card from "@components/extras/Card.astro";
 const { cursos } = Astro.props;
 
 const masajes = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 34)
+  curso.categories.some((categoria) => categoria.id === 34),
 );
 
 const deportivos = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 45)
+  curso.categories.some((categoria) => categoria.id === 45),
 );
 
 const esteticos = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 44)
+  curso.categories.some((categoria) => categoria.id === 44),
 );
 
 const diplomados = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 32)
+  curso.categories.some((categoria) => categoria.id === 32),
 );
 
 const inicio = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 29)
+  curso.categories.some((categoria) => categoria.id === 29),
 );
 
 const complementaria = cursos.filter((curso) =>
-  curso.categories.some((categoria) => categoria.id === 46)
+  curso.categories.some((categoria) => categoria.id === 46),
 );
 ---
 
-<div>
+<div class="mb-20 lg:mb-0">
   <h2 class="text-2xl font-bold mt-8 mb-2">
     Para ser un Masoterapeuta Profesional
   </h2>
