Creacion footer y header para curso, con boton atras en header y boton comprar en footer. Arreglos menores padding

--- a/src/components/cursos/ReservaPrecio.astro
+++ b/src/components/cursos/ReservaPrecio.astro
@@ -2,10 +2,11 @@
 interface Props {
   precio: number;
   descuento?: number;
+  fecha?: string;
   id: number;
 }
 
-const { precio, id, descuento } = Astro.props;
+const { precio, id, descuento, fecha } = Astro.props;
 
 const moneda = (valor) => {
   const formatterPeso = new Intl.NumberFormat("es-CL", {
@@ -15,21 +16,54 @@ const moneda = (valor) => {
   });
   return formatterPeso.format(valor);
 };
+
+const fechaFormateada = (fecha) => {
+  const fechaObj = new Date(fecha);
+  const dia = fechaObj.getDate();
+  const mes = fechaObj.getMonth() + 1;
+  const anio = fechaObj.getFullYear();
+  const meses = [
+    "Enero",
+    "Febrero",
+    "Marzo",
+    "Abril",
+    "Mayo",
+    "Junio",
+    "Julio",
+    "Agosto",
+    "Septiembre",
+    "Octubre",
+    "Noviembre",
+    "Diciembre",
+  ];
+  return `${dia} de ${meses[mes - 1]} de ${anio}`;
+};
 ---
 
-<div class="stat col-span-1 hidden lg:block">
+<div class="stat col-span-1">
   <div class="stat-title">Valores y Formas de pago</div>
-  <h4 class="font-bold text-2xl">Arancel Total</h4>
-  <div class="stat-value text-sky-600 text-5xl text-center py-6">
-    {moneda(precio)} CLP
-  </div>
-  <div>
-    <button
-      id="compra2"
-      class="btn bg-sky-600 text-white w-full py-6 uppercase"
-      aria-data-id={id}
-    >
-      Inscríbete aquí
-    </button>
-  </div>
+  <h4 class="font-bold text-2xl">
+    Arancel Total <span class="line-through font-light text-md"
+      >{descuento == 0 ? "" : moneda(precio)}
+    </span>
+    <p class="text-sm font-light">
+      {
+        descuento == 0
+          ? ""
+          : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
+      }
+    </p>
+    <div class="stat-value text-sky-600 text-5xl text-center py-6">
+      {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
+    </div>
+    <div>
+      <button
+        id="compra2"
+        class="btn bg-sky-600 text-white w-full py-6 uppercase"
+        aria-data-id={id}
+      >
+        Inscríbete aquí
+      </button>
+    </div>
+  </h4>
 </div>
