--- a/src/components/FooterCurso.astro
+++ b/src/components/FooterCurso.astro
@@ -1,7 +1,19 @@
 ---
 import Container from "@layouts/Container.astro";
-import { menuMobile } from "@lib/menu.ts";
-import { Home, BookHeart, FileBadge, Mail } from "lucide-astro";
+
+const { precio, id } = Astro.props as {
+  precio: number;
+  id: number;
+};
+
+const moneda = (valor) => {
+  const formatterPeso = new Intl.NumberFormat("es-CL", {
+    style: "currency",
+    currency: "CLP",
+    minimumFractionDigits: 0,
+  });
+  return formatterPeso.format(valor);
+};
 ---
 
 <div class="bg-neutral hidden md:block" id="footer">
@@ -70,18 +82,16 @@ import { Home, BookHeart, FileBadge, Mail } from "lucide-astro";
   </Container>
 </div>
 
-<div class="dock md:hidden z-50">
-  {
-    menuMobile.map((item, i) => (
-      <a href={item.href}>
-        {i === 0 ? <Home /> : null}
-        {i === 1 ? <BookHeart /> : null}
-        {i === 2 ? <FileBadge /> : null}
-        {i === 3 ? <Mail /> : null}
-        <span class="dock-label">{item.name}</span>
-      </a>
-    ))
-  }
+<div class="fixed bottom-0 left-0 right-0 md:hidden bg-base-100 p-2 z-50">
+  <span class="text-xl flex align-center justify-center">
+    Arancel Total: <strong>{moneda(precio)} CLP</strong>
+  </span>
+  <button
+    class="btn bg-sky-600 text-white w-full py-6 uppercase mt-2"
+    id="compra3"
+    aria-data-id={id}
+    >Inscríbete Aquí
+  </button>
 </div>
 
 <style>
