--- a/src/components/cursos/Reserva.astro
+++ b/src/components/cursos/Reserva.astro
@@ -4,9 +4,10 @@ import ReservaPrecio from "@components/cursos/ReservaPrecio.astro";
 interface Props {
   precio: number;
   descuento?: number;
+  fecha?: string;
   id: number;
 }
-const { precio, descuento, id } = Astro.props;
+const { precio, descuento, id, fecha } = Astro.props;
 
 const moneda = (valor) => {
   const formatterPeso = new Intl.NumberFormat("es-CL", {
@@ -16,6 +17,28 @@ const moneda = (valor) => {
   });
   return formatterPeso.format(valor);
 };
+
+const fechaFormateada = (fecha) => {
+  const fechaObj = new Date(fecha);
+  const dia = fechaObj.getDate();
+  const mes = fechaObj.getMonth() + 1;
+  const anio = fechaObj.getFullYear();
+  const meses = [
+    "Enero",
+    "Febrero",
+    "Marzo",
+    "Abril",
+    "Mayo",
+    "Junio",
+    "Julio",
+    "Agosto",
+    "Septiembre",
+    "Octubre",
+    "Noviembre",
+    "Diciembre",
+  ];
+  return `${dia} de ${meses[mes - 1]} de ${anio}`;
+};
 ---
 
 <div
@@ -23,21 +46,32 @@ const moneda = (valor) => {
 >
   <div class="stat col-span-1">
     <div class="stat-title">Valores y Formas de pago</div>
-    <h4 class="font-bold text-2xl">Arancel Total</h4>
-    <div class="stat-value text-sky-600 text-5xl text-center lg:p-6 py-6">
-      {moneda(precio)} CLP
-    </div>
-    <div>
-      <button
-        id="compra1"
-        class="btn bg-sky-600 text-white w-full py-6 uppercase"
-        aria-data-id={id}
+    <h4 class="font-bold text-2xl">
+      Arancel Total <span class="line-through font-light text-md"
+        >{descuento == 0 ? "" : moneda(precio)}</span
       >
-        Inscríbete aquí
-      </button>
-    </div>
-  </div>
 
+      <p class="text-sm font-light">
+        {
+          descuento == 0
+            ? ""
+            : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
+        }
+      </p>
+      <div class="stat-value text-sky-600 text-5xl text-center lg:p-6 py-6">
+        {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
+      </div>
+      <div class="hidden md:flex">
+        <button
+          id="compra1"
+          class="btn bg-sky-600 text-white w-full py-6 uppercase"
+          aria-data-id={id}
+        >
+          Inscríbete aquí
+        </button>
+      </div>
+    </h4>
+  </div>
   <div class="stat col-span-1">
     <div class="stat-title">Medios de Pago</div>
     <span> Pago con tarjeta de débito o tarjeta de crédito. </span>
