--- a/src/components/inicio/Formaciones.astro
+++ b/src/components/inicio/Formaciones.astro
@@ -38,7 +38,7 @@ const formaciones = [
 ---
 
 <Container>
-  <div id="formaciones" class="pt-16">
+  <div id="formaciones">
     <h2 class="text-2xl font-bold">Nuestras Formaciones</h2>
     <ul
       class="my-2 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-2 xl:gap-4"
