Btn whats y arreglo menu mobile con btn whats

--- a/src/components/categorias/Masoterapia.astro
+++ b/src/components/categorias/Masoterapia.astro
@@ -28,7 +28,7 @@ const complementaria = cursos.filter((curso) =>
 ---
 
 <div class="mb-20 lg:mb-0">
-  <h2 class="text-2xl font-bold mt-8 mb-2">
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
     Para ser un Masoterapeuta Profesional
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
@@ -43,7 +43,7 @@ const complementaria = cursos.filter((curso) =>
     }
   </div>
 
-  <h2 class="text-2xl font-bold mt-8 mb-2">
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
     Inicia o explora en la masoterapia
   </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
@@ -58,7 +58,9 @@ const complementaria = cursos.filter((curso) =>
     }
   </div>
 
-  <h2 class="text-2xl font-bold mt-8 mb-2">Cursos de Masajes</h2>
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
+    Cursos de Masajes
+  </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
     {
       masajes.map((curso) => {
@@ -71,7 +73,9 @@ const complementaria = cursos.filter((curso) =>
     }
   </div>
 
-  <h2 class="text-2xl font-bold mt-8 mb-2">Cursos de masajes deportivos</h2>
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
+    Cursos de masajes deportivos
+  </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
     {
       deportivos.map((curso) => {
@@ -84,7 +88,9 @@ const complementaria = cursos.filter((curso) =>
     }
   </div>
 
-  <h2 class="text-2xl font-bold mt-8 mb-2">Cursos de masajes estéticos</h2>
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
+    Cursos de masajes estéticos
+  </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
     {
       esteticos.map((curso) => {
@@ -97,7 +103,9 @@ const complementaria = cursos.filter((curso) =>
     }
   </div>
 
-  <h2 class="text-2xl font-bold mt-8 mb-2">Terapia complementaria</h2>
+  <h2 class="text-lg lg:text-2xl font-bold mt-8 mb-2 uppercase">
+    Terapia complementaria
+  </h2>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
     {
       inicio.map((curso) => {
