--- a/src/components/categorias/Header.astro
+++ b/src/components/categorias/Header.astro
@@ -6,7 +6,7 @@ const { titulo, descripcion } = Astro.props;
   <div class="hero-content text-center">
     <div class="max-w-2xl">
       <h1 class="text-5xl font-bold text-white">{titulo}</h1>
-      <p class="py-6 text-lg text-gray-200">
+      <p class="py-6 lg:text-lg text-gray-200">
         {descripcion}
       </p>
     </div>
