--- a/src/components/cursos/ReservaPrecio.astro
+++ b/src/components/cursos/ReservaPrecio.astro
@@ -40,30 +40,33 @@ const fechaFormateada = (fecha) => {
 };
 ---
 
-<div class="stat col-span-1">
-  <div class="stat-title">Valores y Formas de pago</div>
-  <h4 class="font-bold text-2xl">
-    Arancel Total <span class="line-through font-light text-md"
-      >{descuento == 0 ? "" : moneda(precio)}
-    </span>
-    <p class="text-sm font-light">
-      {
-        descuento == 0
-          ? ""
-          : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
-      }
-    </p>
-    <div class="stat-value text-sky-600 text-5xl text-center py-6">
-      {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
-    </div>
-    <div>
-      <button
-        id="compra2"
-        class="btn bg-sky-600 text-white w-full py-6 uppercase"
-        aria-data-id={id}
+<div class="stats stats-vertical lg:stats-horizontal grid grid-cols-1 gap-4">
+  <div class="stat col-span-1">
+    <div class="stat-title">Valores y Formas de pago</div>
+    <h4 class="font-bold text-2xl">
+      Arancel Total <span class="line-through font-light text-md"
+        >{descuento == 0 ? "" : moneda(precio)}</span
       >
-        Inscríbete aquí
-      </button>
-    </div>
-  </h4>
+
+      <p class="text-sm font-light">
+        {
+          descuento == 0
+            ? ""
+            : `Arancel con descuento. Válido hasta el ${fechaFormateada(fecha)}`
+        }
+      </p>
+      <div class="stat-value text-sky-600 text-5xl text-center lg:p-6 py-6">
+        {descuento == 0 ? moneda(precio) : moneda(descuento)} CLP
+      </div>
+      <div class="hidden md:flex">
+        <button
+          id="compra2"
+          class="btn bg-sky-600 text-white py-6 uppercase w-full"
+          aria-data-id={id}
+        >
+          Inscríbete aquí
+        </button>
+      </div>
+    </h4>
+  </div>
 </div>
