--- a/src/pages/cursos/[slug].astro
+++ b/src/pages/cursos/[slug].astro
@@ -80,7 +80,7 @@ const seo: Seo = {
       </div>
       <aside class="col-span-1 flex flex-col gap-4">
         <DatosContacto />
-        <div class="card bg-base-100 shadow-xl p-4 hidden lg:block">
+        <div class="card bg-base-100 shadow-xl p-4 hidden lg:block relative">
           <ReservaPrecio
             precio={curso.regular_price}
             descuento={curso.sale_price}
